--- a/client/src/Pages/HomePage/Styles/Index.scss
+++ b/client/src/Pages/HomePage/Styles/Index.scss
@@ -1,5 +1,9 @@
 .banner {}
 
+* {
+    font-family: 'Montserrat', sans-serif !important;
+}
+
 .booking-section {
     position: relative;
     margin-left: auto;
