--- a/client/src/Pages/AdminPage/Management/Users/style.scss
+++ b/client/src/Pages/AdminPage/Management/Users/style.scss
@@ -3,6 +3,10 @@
     padding: 30px;
     color: #444 !important;
 
+    input {
+        outline: none;
+    }
+
     .manage-content {
         background-color: white;
         border-radius: 5px;
