--- a/client/src/Pages/LoginPage/Login.scss
+++ b/client/src/Pages/LoginPage/Login.scss
@@ -2,7 +2,7 @@
     background-color: #f8fafb;
     min-height: 100vh;
 
-    .content {
+    .login-content {
         padding: 7rem 0;
 
         .form-block {
@@ -96,7 +96,7 @@
             .sign-up {
                 color: #b3b3b3;
                 font-weight: 500;
-                margin-top: 20px;
+                margin-bottom: 20px;
                 // transform: translateY(20px);
                 cursor: pointer;
 
