--- a/client/src/Pages/LoginPage/Login.scss
+++ b/client/src/Pages/LoginPage/Login.scss
@@ -32,8 +32,6 @@
                 }
 
                 .forgot-pass {
-
-
                     border-bottom: 1px solid #ccc;
                     cursor: pointer;
                 }
@@ -57,11 +55,6 @@
                 }
             }
 
-            .first {
-                border-top-left-radius: 7px;
-                border-top-right-radius: 7px;
-            }
-
             input {
                 border: none;
                 outline: none;
@@ -77,7 +70,6 @@
                 margin-bottom: 2.5rem;
                 font-size: 20px;
 
-
                 label {
                     font-size: 13px;
                     display: block;
@@ -89,6 +81,11 @@
                     top: 50%;
                     transform: translateY(-50%);
                     transition: .3s all ease;
+                }
+
+                .form-control:not(:placeholder-shown)+label,
+                .form-control:focus+label {
+                    top: -12px;
                 }
 
             }
@@ -111,9 +108,12 @@
                 justify-content: space-between;
                 align-items: center;
                 padding-bottom: 50px;
+                position: relative;
+                padding: 10px 0;
 
                 label {
-                    padding: 10px 0;
+                    position: absolute;
+                    top: -15px;
                     font-size: 13px;
                     color: #b3b3b3;
                     font-weight: 600;
