--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -25,5 +25,58 @@
                 color: #fff;
             }
         }
+
+        .user-container {
+            background-color: gray;
+            height: 30px;
+            width: 30px;
+            border-radius: 50%;
+            text-align: center;
+            cursor: pointer;
+            position: relative;
+
+            .icon {
+                margin-top: 2px;
+
+
+            }
+
+            &:hover {
+                .menu-list {
+                    // top: 50px;
+                    opacity: 1;
+                    transform: translateY(80px);
+                }
+            }
+
+            .menu-list {
+                position: absolute;
+                width: 100px;
+                left: 0;
+                bottom: 0;
+                border-radius: 10px;
+                transition: 1s ease;
+                transform: translateY(1000px);
+                opacity: 0;
+
+                ul {
+                    list-style: none;
+                    margin: 0;
+                    padding: 0;
+
+                    li {
+                        background-color: #fff;
+                        padding: 5px 0;
+                        border: #ddd 1px solid;
+
+                        &:hover {
+                            color: #4FA580;
+                        }
+                    }
+                }
+            }
+
+        }
     }
+
 }
