--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -27,56 +27,56 @@
         }
 
         .user-container {
-            background-color: gray;
-            height: 30px;
-            width: 30px;
-            border-radius: 50%;
-            text-align: center;
-            cursor: pointer;
             position: relative;
 
-            .icon {
-                margin-top: 2px;
+            .avatar {
+                background-color: gray;
+                height: 30px;
+                width: 30px;
+                border-radius: 50%;
+                text-align: center;
+                cursor: pointer;
 
-
-            }
-
-            &:hover {
-                .menu-list {
-                    // top: 50px;
-                    opacity: 1;
-                    transform: translateY(80px);
+                .icon {
+                    margin-top: 2px;
                 }
-            }
 
-            .menu-list {
-                position: absolute;
-                width: 100px;
-                left: 0;
-                bottom: 0;
-                border-radius: 10px;
-                transition: 1s ease;
-                transform: translateY(1000px);
-                opacity: 0;
-
-                ul {
-                    list-style: none;
-                    margin: 0;
-                    padding: 0;
-
-                    li {
-                        background-color: #fff;
-                        padding: 5px 0;
-                        border: #ddd 1px solid;
-
-                        &:hover {
-                            color: #4FA580;
-                        }
+                &:hover {
+                    .menu-list {
+                        top: 30px;
+                        opacity: 1;
                     }
                 }
             }
-
         }
-    }
 
+        .menu-list {
+            position: absolute;
+            width: 100px;
+            left: 20px;
+            top: 1000px;
+            border-radius: 5px;
+            transition: 1s ease;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            // opacity: 0;
+            background-color: #fff;
+            // border: #ddd 1px solid;
+
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                text-align: center;
+
+                li {
+                    padding: 5px;
+
+                    &:hover {
+                        color: #4FA580;
+                    }
+                }
+            }
+        }
+
+    }
 }
