--- a/client/src/Pages/AdminPage/Management/Users/style.scss
+++ b/client/src/Pages/AdminPage/Management/Users/style.scss
@@ -168,4 +168,19 @@
             }
         }
     }
+
+    .action-button {
+        .icon {
+            margin-right: 10px;
+            cursor: pointer;
+        }
+
+        .edit-btn {
+            color: #56b49e;
+        }
+
+        .trash-btn {
+            color: #E96447;
+        }
+    }
 }
